# rs-torrent-client

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  justfile  package.json  pnpm-lock.yaml  rust-toolchain.toml
.cursor/commands/: commit.md
.devcontainer/: README.md  devcontainer.json
.pnpm-store/v10/index/23/: b0088396e802be51d0516d27aac27c3f8b16c587a7cd5da25ac50fc4bbf54f-prettier@3.6.2.json
.pnpm-store/v10/index/2e/: d3ab6ef0dfe67742f578bee1066354bd30a05ca617fc524ca64a3e0aeb97b1-@types+node@24.0.12.json
.pnpm-store/v10/index/67/: 3f9a6564a3f0b13ace8c43fb1ae387855f9081bc61ae8bbd8919aad5101893-undici-types@7.16.0.json
.pnpm-store/v10/index/8e/: 5d6f6733c38a72ebf5e52ddc9feded5e8580d130f508ef04f772b33f4a7d00-typescript@5.9.3.json
.pnpm-store/v10/index/a7/: 57625ba4ea2fd2f4ee7371bd130cee130cc387395cea3fd626cbe1a0081a64-typescript@5.8.3.json
.pnpm-store/v10/index/be/: 70d5a583cccece30ba7976ee31eb7e6c288ce18ac9ad31c8cdec1fe504e62b-@types+node@24.10.4.json
.pnpm-store/v10/index/bf/: a50d8b5fb7852955beff1f49aa146e0804339544aca9a6a4603b3e5dc717c5-prettier@3.7.4.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: CHECKPOINT.md
md/: checkpoint.md  context.md  goals.md  setup.md
src/: lib.rs  main.rs
src/bencode/: encoder.rs  mod.rs
src/bencode/decoder/: mod.rs
src/bencode/encoder/: mod.rs
src/peer/: handshake.rs  message.rs
src/torrent/: file.rs  info_hash.rs  mod.rs
src/torrent/file/: mod.rs
src/tracker/: mod.rs
(+1 files in other folders)
