[package]
name = "rs-torrent-client"
version = "1.0.0-beta"
edition = "2021"

[[bin]]
name = "rstc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
hex = "0.4.3"
rand = { version = "0.9.1", features = ["std"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_bencode = "0.2.4"
sha1 = "0.10.6"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
